# mine

./: README.md  backend_test.py  design_guidelines.json
.emergent/: emergent.yml
backend/: server.py
frontend/: .env
frontend/src/: App.css  App.js  index.css
frontend/src/components/apps/: Calculator.js  FileManager.js  Settings.js  TaskManager.js  Terminal.js  TextEditor.js  WebBrowser.js
frontend/src/components/os/: ContextMenu.js  Desktop.js  StartMenu.js  Taskbar.js  Window.js
frontend/src/contexts/: WindowContext.js
memory/: PRD.md
mineos-kernel/: Cargo.toml  Makefile  README.md
mineos-kernel/asm/: boot.asm  interrupts.asm
mineos-kernel/src/: main.rs
mineos-kernel/src/apps/: calculator.rs  mod.rs  terminal.rs
mineos-kernel/src/drivers/: framebuffer.rs  keyboard.rs  memory.rs  mod.rs  pic.rs  vga_text.rs
mineos-kernel/src/gui/: desktop.rs  font.rs  mod.rs  taskbar.rs  widgets.rs  window.rs
test_reports/: backend_api_results.json  iteration_1.json
