[package]
name = "mineos-kernel"
version = "1.0.0"
edition = "2021"
authors = ["MineOS Team"]
description = "MineOS - A bare-metal operating system with graphical interface written in Rust and Assembly"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.14"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
